--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Blurry loading</title>
 </head>
-<body>
+<body onload = pageLoad()>
     <div class="bcgImg">
-        <div class="loadingText">
-            0%
-        </div>
+    </div>
+    <div class="loadingText">
+        0%
     </div>
 </body>
-
-
 
 <script src="./script.js"></script>
 </html>
